<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.muhammedfayed.publishandsell.UI.AddNewPostActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:contentDescription="@string/title_des"
                    android:id="@+id/title_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:ems="10"
                    android:hint="@string/title"
                    android:inputType="textPersonName"
                    android:textSize="16dp" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:contentDescription="@string/phone_des"
                    android:id="@+id/phone_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:ems="10"
                    android:hint="@string/phone"
                    android:inputType="number"
                    android:textSize="16dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:contentDescription="@string/price_des"
                    android:id="@+id/desc_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:ems="10"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    android:textSize="16dp" />
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:contentDescription="@string/photo_des"
                android:id="@+id/imageview"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:focusableInTouchMode="true"
                android:scaleType="centerCrop" />


            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/buttons_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <Button
                    android:contentDescription="@string/upload_des"
                    android:id="@+id/upload_btn"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/colorAccent"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/upload"
                    android:textColor="@color/white" />

                <Button
                    android:contentDescription="@string/publish_des"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/publish_btn"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/colorAccent"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/publish"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
