<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.muhammedfayed.publishandsell.UI.NoInternetActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/no_internet"
        android:text="@string/no_internet"
        android:textAlignment="center" />

    <Button
        android:id="@+id/retry_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/retry_des"
        android:text="@string/retry" />
</LinearLayout>
