<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/simi_clear"
    android:orientation="vertical"
    tools:context="com.example.muhammedfayed.publishandsell.UI.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:contentDescription="@string/logo_des"
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:focusableInTouchMode="true"
                android:src="@drawable/logo" />

            <TextView
                android:contentDescription="@string/slogin"
                android:textAllCaps="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/slogin"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30dp" />

            <TextView
                android:contentDescription="@string/logo_des"
                android:id="@+id/login_txt"
                android:textSize="13sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:text="@string/login2"
                android:textAlignment="center"
                android:textColor="@color/offwhite" />

            <Button
                android:contentDescription="@string/get_start_des"
                android:id="@+id/getstarted_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/colorAccent"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/get_started"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
